--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,7 @@
 						<!--登录后跳转-->
 
 
+						<a style="color:white" class="fr loginbtn" href="{% url 'register'%}?next={{ request.path }}">注册</a>
 						<a style="color:white" class="fr loginbtn" href="{% url 'login'%}?next={{ request.path }}">登录</a>
 
 
